# gitsub

./: .justfile  .pylintrc  README.md  pyproject.toml
.githooks/: post-commit  pre-push
